--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>angelomoreno</groupId>
-    <artifactId>musicstore</artifactId>
+    <artifactId>Es3_181023</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -45,12 +45,6 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.11</version>
             <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
-        <dependency>
-            <groupId>com.github.javafaker</groupId>
-            <artifactId>javafaker</artifactId>
-            <version>1.0.2</version>
         </dependency>
 
     </dependencies>
